samples/sample3/CompileFiles/compile_file_test2.txt

samples/sample3/MyClass.cpp: In member function ‘int MyClass::getValue()’:
samples/sample3/MyClass.cpp:9:1: error: expected ‘;’ before ‘}’ token
 }
 ^
